--- a/BudggyUWP/BudggyUWP/BinsHome.xaml
+++ b/BudggyUWP/BudggyUWP/BinsHome.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Background="DarkGreen">
-       
+    <Grid>
+        
     </Grid>
 </Page>
