--- a/BudggyUWP/BudggyUWP/Dictionary1.xaml
+++ b/BudggyUWP/BudggyUWP/Dictionary1.xaml
@@ -20,4 +20,14 @@
         <Setter Property="FontFamily" Value="Segoe MDL2 Assets"/>
         
     </Style>
+
+    <Style TargetType="TextBlock" x:Key="MyBinsHomeTextBlockStyle">
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+
+    <Style TargetType="TextBox" x:Key="MyBinsHomeTextBoxStyle">
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="Margin" Value="20,0,0,20"/>
+    </Style>
 </ResourceDictionary>
