--- a/BudggyUWP/BudggyUWP/TransferHome.xaml
+++ b/BudggyUWP/BudggyUWP/TransferHome.xaml
@@ -7,8 +7,73 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary1.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <Style x:Name="BudggyHomeTBlock" TargetType="TextBlock">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style x:Name="BudggyHomeTBox" TargetType="TextBox">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+        </ResourceDictionary>
+    </Page.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <!--<ColumnDefinition Width="2*"/> -->
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <RelativePanel Grid.Row="1" Grid.ColumnSpan="3">
+            <StackPanel Grid.Row="1" Grid.ColumnSpan="3"                        
+                        RelativePanel.AlignHorizontalCenterWithPanel="True"
+                        RelativePanel.AlignVerticalCenterWithPanel="True"
+                        Orientation="Horizontal">
+                <TextBlock Text="From:"/>
+                <ComboBox x:Name="FromBinsCB" Width="200"
+                          VerticalAlignment="Center"
+                          Margin="0,0,20,0" 
+                          >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                    
+                </ComboBox>
+                <TextBlock Text="To:"/>
+                <ComboBox x:Name="ToBinsCB" Width="200"
+                          VerticalAlignment="Center"
+                          Margin="0,0,20,0" 
+                          >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
 
-    <Grid Background="Red">
+                </ComboBox>                
+                
+                <TextBox Name="ValueTB" PlaceholderText="Value"   
+                         Style="{StaticResource BudggyHomeTBox}"                         
+                         KeyUp="ValueTB_KeyUp"      
+                         
+                         Width="100" Margin="20,0,0,0"/>
+                <CalendarDatePicker Name="THomeCDP"
+                                    IsTodayHighlighted="True"                                    
+                                    Margin="20,0,0,0"/>
+                <Button Name="TransferButton" Content="Transfer" 
+                        Margin="20,0,0,0"                       
+                        Click="TransferButton_Click"/>
 
+            </StackPanel>
+        </RelativePanel>
     </Grid>
 </Page>
