--- a/BudggyUWP/BudggyUWP/MainPage.xaml
+++ b/BudggyUWP/BudggyUWP/MainPage.xaml
@@ -43,7 +43,7 @@
                     Background="LightGray"  Height="50" Width="200" 
                      RelativePanel.LeftOf="searchBT" />
 
-            <Button Name="searchBT" Style="{StaticResource MyMenuButtonStyle}"
+            <Button Name="searchBT" Click="SearchBT_Click" Style="{StaticResource MyMenuButtonStyle}"
                     Content="&#xE1A3;" RelativePanel.AlignRightWithPanel="True"/>
         </RelativePanel>
         
