Going to suck it up and create a ToString method for every data structure, save it into a file, and read it out of the file to save my information.

--- a/BudggyUWP/BudggyUWP/MainPage.xaml
+++ b/BudggyUWP/BudggyUWP/MainPage.xaml
@@ -45,6 +45,8 @@
 
             <Button Name="searchBT" Click="SearchBT_Click" Style="{StaticResource MyMenuButtonStyle}"
                     Content="&#xE1A3;" RelativePanel.AlignRightWithPanel="True"/>
+            <Button Name="saveBT" Click="SaveBT_Click" Style="{StaticResource MyMenuButtonStyle}"
+                    Content="&#xE1A1;" RelativePanel.LeftOf="searchTextBox" />
         </RelativePanel>
         
         <SplitView 
