--- a/BudggyUWP/BudggyUWP/MainPage.xaml
+++ b/BudggyUWP/BudggyUWP/MainPage.xaml
@@ -45,7 +45,7 @@
 
             <Button Name="searchBT" Click="SearchBT_Click" Style="{StaticResource MyMenuButtonStyle}"
                     Content="&#xE1A3;" RelativePanel.AlignRightWithPanel="True"/>
-            <Button Name="saveBT" Click="SaveBT_Click" Style="{StaticResource MyMenuButtonStyle}"
+            <Button Name="saveBT" Style="{StaticResource MyMenuButtonStyle}"
                     Content="&#xE1A1;" RelativePanel.LeftOf="searchTextBox" />
         </RelativePanel>
         
