--- a/BudggyUWP/BudggyUWP/BinsHome.xaml
+++ b/BudggyUWP/BudggyUWP/BinsHome.xaml
@@ -141,7 +141,7 @@
                                 <TextBlock Text="Balance:"
                                            Margin="0,0,10,0"
                                            FontSize="24"/>
-                                <TextBlock Text="{Binding Balance, UpdateSourceTrigger=PropertyChanged}"                                   
+                                <TextBlock Text="{Binding BalanceString, UpdateSourceTrigger=PropertyChanged}"                                   
                                    FontSize="24"/>                                
                             </StackPanel>
                             <StackPanel Orientation="Horizontal"
