--- a/BudggyUWP/BudggyUWP/BudggyHome.xaml
+++ b/BudggyUWP/BudggyUWP/BudggyHome.xaml
@@ -37,9 +37,11 @@
                         RelativePanel.AlignVerticalCenterWithPanel="True"
                         Orientation="Horizontal">
                 <ToggleSwitch Name="SplitTSW" Header="Split Income" IsOn="True"/>
+                <StackPanel>
                 <ComboBox x:Name="BinsCB" Width="200"
                           VerticalAlignment="Center"
-                          Margin="0,0,20,0" 
+                          Margin="0,14,20,0" 
+                          SelectionChanged="BinsCB_SelectionChanged"
                           >                    
                     <ComboBox.ItemTemplate>
                         <DataTemplate  >
@@ -47,7 +49,20 @@
                           
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
-                </ComboBox>               
+                </ComboBox>
+                    <ComboBox x:Name="DrawersCB" Width="200"
+                          VerticalAlignment="Center"
+                          Margin="0,0,20,0" 
+                          Visibility="Collapsed"                             
+                          >
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate  >
+                                <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </StackPanel>
                 <ComboBox x:Name="IncExpCB" Width="100"
                           SelectedIndex="0" 
                           VerticalAlignment="Center"
